# c_colors

./: .direnv  .envrc  .gitignore  .gitmodules  Makefile  colornames.sh  meson.build
color-db/: color-db.c  color-db.h  meson.build
colors/: colors.c  colors.h  meson.build
colors-csv-parser/: colors-csv-parser.c  colors-csv-parser.h  meson.build
colors-json-parser/: colors-json-parser.c  colors-json-parser.h  meson.build
colors-test/: colors-test.c  colors-test.h  meson.build
colors_csv_parser/: colors_csv_parser.c  colors_csv_parser.h  meson.build  rgb2ansi.c
db/: db-mgr.c  db-mgr.h  db.c  db.h  meson.build
dbmem/: dbmem.c  dbmem.h  meson.build
dbmem-test/: dbmem-test.c  dbmem-test.h  meson.build
etc/: uncrustify.cfg
hex-png-pixel-creator/: hex-png-pixel-creator.c  hex-png-pixel-creator.h  meson.build
hex-png-pixel-utils/: hex-png-pixel-utils.c  hex-png-pixel-utils.h  meson.build  stb_image_write.h
include/: colors.h
meson/: meson.build
parse-colors/: meson.build  parse-colors.c  parse-colors.h
parser/: main.c  meson.build  parser.h  rgb2ansi.c
rgb-ansi-utils/: meson.build  rgb-ansi-utils.c  rgb-ansi-utils.h
src/: colors.c  hex-png-pixel-utils.c  hex-png-pixel.c  pngpixel.c
subprojects/: c_ansi.wrap  libspng.wrap
